[gd_scene load_steps=5 format=2]

[ext_resource path="res://images/0.png" type="Texture" id=1]
[ext_resource path="res://Sprite.gd" type="Script" id=2]
[ext_resource path="res://audio/bounce.wav" type="AudioStream" id=3]
[ext_resource path="res://audio/out.wav" type="AudioStream" id=4]

[node name="sprite" type="Sprite"]
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 1 )
script = ExtResource( 2 )

[node name="bounce" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = -8.0
pitch_scale = 0.8

[node name="out" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -8.0
pitch_scale = 0.8

[node name="efectox" type="Tween" parent="."]

[node name="efectoy" type="Tween" parent="."]

[node name="efecto_final" type="Tween" parent="."]

[node name="Sprite" type="Node2D" parent="."]

[connection signal="finished" from="out" to="." method="_on_out_finished"]
[connection signal="tween_completed" from="efecto_final" to="." method="_on_efecto_final_tween_completed"]
